# loggex

./: .gitignore  LICENSE  README.md  setup.cfg
src/loggex/: __init__.py  core.py
