[metadata]
name = loggex
version = 0.1.0
description = A simple experiment logging library.
author = Ignacio Sastre
author_email = isastre@fing.edu.uy
url = https://github.com/nsuruguay05/loggex
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    openpyxl

[options.packages.find]
where = src
